--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -96,7 +96,7 @@ body {
   border-radius: 4px;
 }
 .bg-primary {
-  background-color: #ffe161 !important;
+  background-color: #fccd07 !important;
 }
 .bg-success {
   background-color: #40b0bf !important;
@@ -112,25 +112,25 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #ffe161 !important;
-  border-color: #ffe161 !important;
-  color: #614f00 !important;
+  background-color: #fccd07 !important;
+  border-color: #fccd07 !important;
+  color: #040300 !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus,
 .btn-primary.active {
-  color: #0a0800 !important;
-  background-color: #ffd10a !important;
-  border-color: #ffd10a !important;
+  color: #ffffff !important;
+  background-color: #aa8a02 !important;
+  border-color: #aa8a02 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
-  color: #614f00 !important;
-  background-color: #ffd10a !important;
-  border-color: #ffd10a !important;
+  color: #040300 !important;
+  background-color: #aa8a02 !important;
+  border-color: #aa8a02 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -290,22 +290,22 @@ body {
 .btn-primary-outline:active {
   background-color: transparent !important;
   border-color: transparent;
-  color: #ffe161;
+  color: #fccd07;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #ffd10a !important;
+  color: #aa8a02 !important;
   background-color: transparent!important;
   border-color: transparent!important;
   box-shadow: none!important;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
-  color: #614f00 !important;
-  background-color: #ffe161 !important;
-  border-color: #ffe161 !important;
+  color: #040300 !important;
+  background-color: #fccd07 !important;
+  border-color: #fccd07 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -455,7 +455,7 @@ body {
   border-color: #fafafa !important;
 }
 .text-primary {
-  color: #ffe161 !important;
+  color: #fccd07 !important;
 }
 .text-secondary {
   color: #e43f3f !important;
@@ -481,7 +481,7 @@ body {
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
-  color: #facb00 !important;
+  color: #9b7e02 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus,
@@ -532,7 +532,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-position: 0px 1.2em;
 }
 .nav-tabs .nav-link.active {
-  color: #ffe161;
+  color: #fccd07;
 }
 .nav-tabs .nav-link:not(.active) {
   color: #232323;
@@ -550,20 +550,20 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-color: #ff9966;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #ffe161;
-  border-color: #ffe161;
-  color: #7a6300;
+  background-color: #fccd07;
+  border-color: #fccd07;
+  color: #1d1800;
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
 }
 a,
 a:hover {
-  color: #ffe161;
+  color: #fccd07;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #fef6d1;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -597,7 +597,7 @@ a:hover {
 .form-control:hover,
 .form-control:focus {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px 0px, rgba(0, 0, 0, 0.07) 0px 1px 3px 0px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
-  border-color: #ffe161 !important;
+  border-color: #fccd07 !important;
 }
 .form-control:-webkit-input-placeholder {
   font-family: 'Jost', sans-serif;
@@ -609,19 +609,19 @@ a:hover {
   font-size: 1.375rem;
 }
 blockquote {
-  border-color: #ffe161;
+  border-color: #fccd07;
 }
 /* Forms */
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #ffe161;
+  background-color: #fccd07;
   color: #000000;
 }
 .jq-number__spin {
   transition: 0.25s ease;
 }
 .jq-number__spin:hover {
-  border-color: #ffe161;
+  border-color: #fccd07;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -633,14 +633,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #ffe161;
-  border-bottom-color: #ffe161;
+  border-top-color: #fccd07;
+  border-bottom-color: #fccd07;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #000000 !important;
-  background-color: #ffe161 !important;
+  background-color: #fccd07 !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -671,7 +671,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23ffe161' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23fccd07' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.5;
@@ -734,7 +734,7 @@ a {
 }
 .cid-tAG5fo3xKn .dropdown-item:hover,
 .cid-tAG5fo3xKn .dropdown-item:focus {
-  background: #ffe161 !important;
+  background: #fccd07 !important;
   color: white !important;
 }
 .cid-tAG5fo3xKn .dropdown-item:first-child {
@@ -1083,7 +1083,7 @@ a {
 }
 .cid-tAG5fo3xKn .dropdown-item:hover,
 .cid-tAG5fo3xKn .dropdown-item:focus {
-  background: #ffe161 !important;
+  background: #fccd07 !important;
   color: white !important;
 }
 .cid-tAG5fo3xKn .dropdown-item:first-child {
@@ -1856,7 +1856,7 @@ a {
 }
 .cid-tAG5fo3xKn .dropdown-item:hover,
 .cid-tAG5fo3xKn .dropdown-item:focus {
-  background: #ffe161 !important;
+  background: #fccd07 !important;
   color: white !important;
 }
 .cid-tAG5fo3xKn .dropdown-item:first-child {
@@ -2226,7 +2226,7 @@ a {
 }
 .cid-tAG5fo3xKn .dropdown-item:hover,
 .cid-tAG5fo3xKn .dropdown-item:focus {
-  background: #ffe161 !important;
+  background: #fccd07 !important;
   color: white !important;
 }
 .cid-tAG5fo3xKn .dropdown-item:first-child {
@@ -2583,7 +2583,7 @@ a {
 }
 .cid-tAG5fo3xKn .dropdown-item:hover,
 .cid-tAG5fo3xKn .dropdown-item:focus {
-  background: #ffe161 !important;
+  background: #fccd07 !important;
   color: white !important;
 }
 .cid-tAG5fo3xKn .dropdown-item:first-child {
@@ -2898,14 +2898,6 @@ a {
     left: -1rem;
   }
 }
-.cid-tAG4k8SikC {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-tAG4k8SikC img {
-  width: auto;
-}
 .cid-tAG5fo3xKn {
   z-index: 1000;
   width: 100%;
@@ -2940,7 +2932,7 @@ a {
 }
 .cid-tAG5fo3xKn .dropdown-item:hover,
 .cid-tAG5fo3xKn .dropdown-item:focus {
-  background: #ffe161 !important;
+  background: #fccd07 !important;
   color: white !important;
 }
 .cid-tAG5fo3xKn .dropdown-item:first-child {
@@ -3254,4 +3246,32 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-tAG7xG98PY {
+  padding-top: 6rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tAG7xG98PY .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tAG7xG98PY .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tAG7xG98PY .mbr-section-title,
+.cid-tAG7xG98PY .mbr-text,
+.cid-tAG7xG98PY .mbr-section-btn {
+  text-align: center;
+}
+.cid-tAG7xG98PY .video-wrapper {
+  margin: auto;
+}
+.cid-tAG7xG98PY .video-wrapper iframe {
+  width: 100%;
 }
