--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2544,380 +2544,6 @@ a {
 .cid-tDeH8YQJ2x textarea {
   min-height: 10rem;
 }
-.cid-tAGaz5RBck {
-  padding-top: 7rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-tAGaz5RBck .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tAGaz5RBck .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tAG18IsRXF {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #efefef;
-}
-.cid-tAG18IsRXF img {
-  width: auto;
-}
-.cid-tAG5fo3xKn {
-  z-index: 1000;
-  width: 100%;
-}
-.cid-tAG5fo3xKn nav.navbar {
-  position: fixed;
-}
-.cid-tAG5fo3xKn .dropdown-item:before {
-  font-family: Moririse2 !important;
-  content: "\e966";
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
-  text-align: center;
-  overflow: hidden;
-  transform: scale(0, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-tAG5fo3xKn .dropdown-menu {
-  padding: 0;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-}
-.cid-tAG5fo3xKn .dropdown-item {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-tAG5fo3xKn .dropdown-item:hover,
-.cid-tAG5fo3xKn .dropdown-item:focus {
-  background: #fccd07 !important;
-  color: white !important;
-}
-.cid-tAG5fo3xKn .dropdown-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.cid-tAG5fo3xKn .dropdown-item:last-child {
-  border-bottom: none;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.cid-tAG5fo3xKn .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: 0.667em 1em !important;
-}
-.cid-tAG5fo3xKn .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-tAG5fo3xKn .nav-link {
-  position: relative;
-}
-.cid-tAG5fo3xKn .container {
-  display: flex;
-  margin: auto;
-}
-.cid-tAG5fo3xKn .iconfont-wrapper {
-  color: #ffffff !important;
-  font-size: 1.5rem;
-  padding-right: 0.5rem;
-}
-.cid-tAG5fo3xKn .dropdown-menu,
-.cid-tAG5fo3xKn .navbar.opened {
-  background: #000000 !important;
-}
-.cid-tAG5fo3xKn .nav-item:focus,
-.cid-tAG5fo3xKn .nav-link:focus {
-  outline: none;
-}
-.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  transition: all 0.25s ease-in-out;
-}
-.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-right: 0.5rem;
-  vertical-align: sub;
-}
-.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  transform: scale(1, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-tAG5fo3xKn .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-tAG5fo3xKn .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-tAG5fo3xKn .navbar {
-  min-height: 70px;
-  transition: all 0.3s;
-  border-bottom: 1px solid transparent;
-  background: #000000;
-}
-.cid-tAG5fo3xKn .navbar.opened {
-  transition: all 0.3s;
-}
-.cid-tAG5fo3xKn .navbar .dropdown-item {
-  padding: 0.5rem 1.8rem;
-}
-.cid-tAG5fo3xKn .navbar .navbar-logo img {
-  width: auto;
-}
-.cid-tAG5fo3xKn .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-tAG5fo3xKn .navbar.collapsed {
-  justify-content: center;
-}
-.cid-tAG5fo3xKn .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-tAG5fo3xKn .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-@media (min-width: 992px) {
-  .cid-tAG5fo3xKn .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3rem);
-  }
-}
-.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 41%;
-}
-.cid-tAG5fo3xKn .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: 0.25rem 1.5rem;
-  text-align: center;
-}
-.cid-tAG5fo3xKn .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-@media (max-width: 991px) {
-  .cid-tAG5fo3xKn .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-tAG5fo3xKn .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 40%;
-  }
-  .cid-tAG5fo3xKn .navbar .navbar-logo img {
-    height: 3rem !important;
-  }
-  .cid-tAG5fo3xKn .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-item {
-    padding: 0.25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-tAG5fo3xKn .navbar .navbar-brand {
-    flex-shrink: initial;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-tAG5fo3xKn .navbar .navbar-toggler {
-    flex-basis: auto;
-  }
-  .cid-tAG5fo3xKn .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-}
-.cid-tAG5fo3xKn .navbar.navbar-short {
-  min-height: 60px;
-}
-.cid-tAG5fo3xKn .navbar.navbar-short .navbar-logo img {
-  height: 2.5rem !important;
-}
-.cid-tAG5fo3xKn .navbar.navbar-short .navbar-brand {
-  min-height: 60px;
-  padding: 0;
-}
-.cid-tAG5fo3xKn .navbar-brand {
-  min-height: 70px;
-  flex-shrink: 0;
-  align-items: center;
-  margin-right: 0;
-  padding: 10px 0;
-  transition: all 0.3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-tAG5fo3xKn .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-tAG5fo3xKn .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-tAG5fo3xKn .dropdown-item.active,
-.cid-tAG5fo3xKn .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-tAG5fo3xKn .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-tAG5fo3xKn .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-tAG5fo3xKn .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-tAG5fo3xKn .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #000000;
-}
-.cid-tAG5fo3xKn .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-tAG5fo3xKn .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-tAG5fo3xKn ul.navbar-nav {
-  flex-wrap: wrap;
-}
-.cid-tAG5fo3xKn .navbar-buttons {
-  text-align: center;
-  min-width: 170px;
-}
-.cid-tAG5fo3xKn button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all 0.2s;
-  position: relative;
-  align-self: center;
-}
-.cid-tAG5fo3xKn button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #fccd07;
-}
-.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all 0.2s;
-}
-.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all 0.2s;
-}
-.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(2) {
-  transform: rotate(45deg);
-  transition: all 0.25s;
-}
-.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(3) {
-  transform: rotate(-45deg);
-  transition: all 0.25s;
-}
-.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-tAG5fo3xKn .navbar-dropdown {
-  padding: 0 1rem;
-  position: fixed;
-}
-.cid-tAG5fo3xKn a.nav-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cid-tAG5fo3xKn .icons-menu {
-  flex-wrap: nowrap;
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-tAG5fo3xKn .navbar {
-    height: 70px;
-  }
-  .cid-tAG5fo3xKn .navbar.opened {
-    height: auto;
-  }
-  .cid-tAG5fo3xKn .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
-}
 .cid-tAG5fo3xKn {
   z-index: 1000;
   width: 100%;
@@ -3294,4 +2920,369 @@ a {
 }
 .cid-tAG7xG98PY .video-wrapper iframe {
   width: 100%;
+}
+.cid-tL9Bmhz2ww {
+  padding-top: 0px;
+  padding-bottom: 75px;
+  background-color: #ffffff;
+}
+.cid-tL9Bmhz2ww img {
+  width: auto;
+}
+.cid-tAG18IsRXF {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tAG18IsRXF img {
+  width: auto;
+}
+.cid-tAG5fo3xKn {
+  z-index: 1000;
+  width: 100%;
+}
+.cid-tAG5fo3xKn nav.navbar {
+  position: fixed;
+}
+.cid-tAG5fo3xKn .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tAG5fo3xKn .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-tAG5fo3xKn .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tAG5fo3xKn .dropdown-item:hover,
+.cid-tAG5fo3xKn .dropdown-item:focus {
+  background: #fccd07 !important;
+  color: white !important;
+}
+.cid-tAG5fo3xKn .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-tAG5fo3xKn .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-tAG5fo3xKn .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-tAG5fo3xKn .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tAG5fo3xKn .nav-link {
+  position: relative;
+}
+.cid-tAG5fo3xKn .container {
+  display: flex;
+  margin: auto;
+}
+.cid-tAG5fo3xKn .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-tAG5fo3xKn .dropdown-menu,
+.cid-tAG5fo3xKn .navbar.opened {
+  background: #000000 !important;
+}
+.cid-tAG5fo3xKn .nav-item:focus,
+.cid-tAG5fo3xKn .nav-link:focus {
+  outline: none;
+}
+.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-tAG5fo3xKn .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tAG5fo3xKn .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tAG5fo3xKn .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tAG5fo3xKn .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  background: #000000;
+}
+.cid-tAG5fo3xKn .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-tAG5fo3xKn .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-tAG5fo3xKn .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tAG5fo3xKn .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tAG5fo3xKn .navbar.collapsed {
+  justify-content: center;
+}
+.cid-tAG5fo3xKn .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tAG5fo3xKn .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-tAG5fo3xKn .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tAG5fo3xKn .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tAG5fo3xKn .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-tAG5fo3xKn .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-tAG5fo3xKn .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tAG5fo3xKn .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-tAG5fo3xKn .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-tAG5fo3xKn .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tAG5fo3xKn .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tAG5fo3xKn .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tAG5fo3xKn .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tAG5fo3xKn .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-tAG5fo3xKn .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tAG5fo3xKn .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-tAG5fo3xKn .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-tAG5fo3xKn .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tAG5fo3xKn .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tAG5fo3xKn .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tAG5fo3xKn .dropdown-item.active,
+.cid-tAG5fo3xKn .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tAG5fo3xKn .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tAG5fo3xKn .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tAG5fo3xKn .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tAG5fo3xKn .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-tAG5fo3xKn .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tAG5fo3xKn .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tAG5fo3xKn ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-tAG5fo3xKn .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tAG5fo3xKn button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tAG5fo3xKn button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #fccd07;
+}
+.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tAG5fo3xKn button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-tAG5fo3xKn nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tAG5fo3xKn .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-tAG5fo3xKn a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tAG5fo3xKn .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tAG5fo3xKn .navbar {
+    height: 70px;
+  }
+  .cid-tAG5fo3xKn .navbar.opened {
+    height: auto;
+  }
+  .cid-tAG5fo3xKn .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
 }
